force-app/main/default/objects/GBase_Document__c/GBase_Document__c.object-meta.xml
<CustomObject>
    <label>GBase Document</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GBase Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>